--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <meta name="description" content="Sistema completo de gestão para times de futebol com funcionalidades para administradores e jogadores" />
     <meta name="author" content="Time Manager" />
     <meta name="keywords" content="futebol, gestão, time, jogadores, administração, esportes, PWA" />
-    <meta name="theme-color" content="#22c55e" />
-
-    <!-- PWA Meta Tags -->
+    <!-- PWA Meta Tags - CRITICAL FOR FULLSCREEN -->
     <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1E293B" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Time Manager" />
     <meta name="msapplication-tap-highlight" content="no" />
+    
+    <!-- Android PWA Fullscreen -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Time Manager" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="msapplication-navbutton-color" content="#1E293B" />
+    <meta name="msapplication-TileColor" content="#1E293B" />
     
     <!-- Open Graph -->
     <meta property="og:title" content="Time Manager - Gestão de Futebol" />
